# SignBLEU

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: pytest.yml
configs/: ns21.yml
docs/: Dockerfile  docker-compose.yaml
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: classtemplate.rst
docs/source/guide/: guide1.rst  main.rst
docs/source/reference/: main.rst  signbleu.api.rst  signbleu.block.rst  signbleu.constants.rst  signbleu.data.rst  signbleu.gram.rst  signbleu.metric.rst  signbleu.outputs.rst  signbleu.rwlock.rst  signbleu.shapley.rst
docs/source/releases/: main.rst  release_notes.rst  v0.1.0.rst
sample_data/: hypotheses.json  references.json  weather_001.eaf  weather_002.eaf
sample_data/annotations/: ncslgr_sample.eaf  ns21_sample.json  pdc_sample.eaf
src/signbleu/: __init__.py  _analyze.py  api.py  block.py  constants.py  data.py  gram.py  metric.py  outputs.py  rwlock.py  shapley.py  utils.py
tests/: test_block.py  test_gram.py  test_metric.py  test_outputs.py  utils.py
