[project]
name = "SignBLEU"
description = "An extension of BLEU to handle multi-channel sign language data."
readme = "README.md"
authors = [
    {name = "Jung-Ho Kim", email = "stuartkim@eq4all.co.kr"},
    {name = "Mathew Huerta-Enochian", email = "mathew@eq4all.co.kr"},
    {name = "Changyong Ko", email = "ericko@eq4all.co.kr"}
]
maintainers = [
    {name = "EQ4ALL"}
]
version = "0.1.0"
requires-python = ">=3.8.0"
dependencies = [
    "click",
    "tqdm",
    "numpy",
]
classifiers= [
    "License :: OSI Approved :: Apache Software License",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx_copybutton",
    "pydata_sphinx_theme",
    "myst_parser",
]

[project.urls]
repository = "https://github.com/eq4all-projects/SignBLEU"
changelog = "https://github.com/eq4all-projects/SignBLEU/blob/master/CHANGELOG.md"

[project.scripts]
signbleu = "signbleu.api:signbleu"
blockify = "signbleu.api:blockify"

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79
target-version = ['py311']
